# mmh-backend

./: .env.example  .gitignore  dvc.yaml  params.yaml  pending_migration.sql  pyproject.toml  render.yaml  requirements.txt  supabase_schema.sql
.dvc/: config
app/: auth.py  config.py  database.py  main.py  models.py  scheduler.py
app/routers/: chat.py  reminders.py  upload.py  voice.py
app/services/: gemini.py  interactions.py  llm.py  medicine_vocab.py  ocr_engine.py  prescription.py  push_service.py  reminder_service.py  search.py  semantic_search.py
data/: .gitignore  eval_results.json.dvc
data/processed/: .gitignore
data/raw/: .gitignore  medicines_v2.csv.dvc
metrics/: data_metrics.json  ocr_metrics.json
migrations/: reminders_v1.sql
scripts/: apply_schema.py  evaluate_ocr.py  finetune_trocr.py  generate_synthetic_data.py  import_medicines.py  scrape_other_companies.py  scrape_top_companies.py  seed_medex.py  setup_supabase.py
src/: analyze.py  evaluate_ocr.py  prepare_data.py
